--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         margin: 0px;
       }
       body {
-        background-color: #b9d9eb;
+        background-color: #B7D4E7;
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
           sans-serif;
@@ -60,26 +60,26 @@
       .heading_btn h3 {
         font-size: 22px;
         font-weight: 400;
-        color: #404040;
+        color: #303030;
         margin-top: 30px;
         margin-bottom: 0px;
       }
       .line_heading_desc {
         height: 1px;
         width: 50%;
-        background: #4f88a9;
+        background: #ff708f;
         margin: 5px 1px;
       }
       .heading_btn p {
         font-size: 13px;
-        color: #4f88a9;
+        color: #606060;
         opacity: 0.7;
         margin-bottom: 18px;
       }
 
       .button {
         border-radius: 4px;
-        background-color: #3889b8;
+        background-color: #2caaff;
         border: none;
         color: #ffffff;
         text-align: center;
@@ -89,9 +89,9 @@
         transition: all 0.5s;
         cursor: pointer;
         /* margin: 5px; */
-        box-shadow: 1px 4px 11px 2px rgba(0, 121, 209, 0.21);
-        -webkit-box-shadow: 1px 4px 11px 2px rgba(0, 121, 209, 0.21);
-        -moz-box-shadow: 1px 4px 11px 2px rgba(0, 121, 209, 0.21);
+        box-shadow: 1px 4px 11px 2px #B7D4E7;
+        -webkit-box-shadow: 1px 4px 11px 2px #B7D4E7;
+        -moz-box-shadow: 1px 4px 11px 2px #B7D4E7;
       }
 
       .button span {
@@ -174,16 +174,16 @@
       <div class="card">
         <div class="display_flex_coloum">
           <img
-            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Celebration+Cakes.png"
+            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Harleys+Medovic.png"
             alt="Celebratio Cakes"
           />
 
           <div class="heading_btn">
             <a class="display_flex_coloum" href="#">
               <div class="card_txt display_flex_coloum">
-                <h3>Celebration Cakes</h3>
+                <h3>Medovik</h3>
                 <div class="line_heading_desc"></div>
-                <p>Cake and Celebration</p>
+                <p>Cakes & Pastries</p>
               </div>
 
               <button class="button"><span>Order Now </span></button></a
@@ -191,6 +191,127 @@
           </div>
         </div>
       </div>
+      <div class="card">
+        <div class="display_flex_coloum">
+          <img
+            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Cheese+Cake.png"
+            alt="Celebratio Cakes"
+          />
+
+          <div class="heading_btn">
+            <a class="display_flex_coloum" href="#">
+              <div class="card_txt display_flex_coloum">
+                <h3>Cheese cake</h3>
+                <div class="line_heading_desc"></div>
+                <p>Cakes & Desserts</p>
+              </div>
+
+              <button class="button"><span>Order Now </span></button></a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="display_flex_coloum">
+          <img
+            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Harleys+Macrons.png"
+            alt="Celebratio Cakes"
+          />
+
+          <div class="heading_btn">
+            <a class="display_flex_coloum" href="#">
+              <div class="card_txt display_flex_coloum">
+                <h3>Macarons</h3>
+                <div class="line_heading_desc"></div>
+                <p>French Cookies</p>
+              </div>
+
+              <button class="button"><span>Order Now </span></button></a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="display_flex_coloum">
+          <img
+            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Harleys+Bar+Cakes+and+Breads.png"
+            alt="Celebratio Cakes"
+          />
+
+          <div class="heading_btn">
+            <a class="display_flex_coloum" href="#">
+              <div class="card_txt display_flex_coloum">
+                <h3>Bar cakes & Breads</h3>
+                <div class="line_heading_desc"></div>
+                <p>Tea Cake & More</p>
+              </div>
+
+              <button class="button"><span>Order Now </span></button></a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="display_flex_coloum">
+          <img
+            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Harleys+Assorted+cookies.png"
+            alt="Celebratio Cakes"
+          />
+
+          <div class="heading_btn">
+            <a class="display_flex_coloum" href="#">
+              <div class="card_txt display_flex_coloum">
+                <h3>Assorted Cookies </h3>
+                <div class="line_heading_desc"></div>
+                <p>Chewy & Crunchy</p>
+              </div>
+
+              <button class="button"><span>Order Now </span></button></a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="display_flex_coloum">
+          <img
+            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Cup+Cakes+and+Desserts.png"
+            alt="Celebratio Cakes"
+          />
+
+          <div class="heading_btn">
+            <a class="display_flex_coloum" href="#">
+              <div class="card_txt display_flex_coloum">
+                <h3>Cupcakes & Desserts</h3>
+                <div class="line_heading_desc"></div>
+                <p>Muffins, Lavas </p>
+              </div>
+
+              <button class="button"><span>Order Now </span></button></a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="display_flex_coloum">
+          <img
+            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Harleys+Grilled+Mayo+Chicken+Croissant++3.png"
+            alt="Celebratio Cakes"
+          />
+
+          <div class="heading_btn">
+            <a class="display_flex_coloum" href="#">
+              <div class="card_txt display_flex_coloum">
+                <h3>Croissant & Sandwich </h3>
+                <div class="line_heading_desc"></div>
+                <p> European Delicacies </p>
+              </div>
+
+              <button class="button"><span>Order Now </span></button></a
+            >
+          </div>
+        </div>
+      </div>
+  
       <div class="card">
         <div class="display_flex_coloum">
           <img
@@ -203,7 +324,28 @@
               <div class="card_txt display_flex_coloum">
                 <h3>Celebration Cakes</h3>
                 <div class="line_heading_desc"></div>
-                <p>Cake and Celebration</p>
+                <p> 1/2kg, 1kg & More</p>
+              </div>
+
+              <button class="button"><span>Order Now </span></button></a
+            >
+          </div>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="display_flex_coloum">
+          <img
+            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Continental.png"
+            alt="Celebratio Cakes"
+          />
+
+          <div class="heading_btn">
+            <a class="display_flex_coloum" href="#">
+              <div class="card_txt display_flex_coloum">
+                <h3>Continental</h3>
+                <div class="line_heading_desc"></div>
+                <p>Burgers, Pizza, Bagel</p>
               </div>
 
               <button class="button"><span>Order Now </span></button></a
@@ -214,16 +356,16 @@
       <div class="card">
         <div class="display_flex_coloum">
           <img
-            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Celebration+Cakes.png"
+            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Harleys+Wrap+and+Rolls.png"
             alt="Celebratio Cakes"
           />
 
           <div class="heading_btn">
             <a class="display_flex_coloum" href="#">
               <div class="card_txt display_flex_coloum">
-                <h3>Celebration Cakes</h3>
+                <h3>Warp & Rolls</h3>
                 <div class="line_heading_desc"></div>
-                <p>Cake and Celebration</p>
+                <p>Fast Food</p>
               </div>
 
               <button class="button"><span>Order Now </span></button></a
@@ -231,187 +373,7 @@
           </div>
         </div>
       </div>
-      <div class="card">
-        <div class="display_flex_coloum">
-          <img
-            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Celebration+Cakes.png"
-            alt="Celebratio Cakes"
-          />
-
-          <div class="heading_btn">
-            <a class="display_flex_coloum" href="#">
-              <div class="card_txt display_flex_coloum">
-                <h3>Celebration Cakes</h3>
-                <div class="line_heading_desc"></div>
-                <p>Cake and Celebration</p>
-              </div>
-
-              <button class="button"><span>Order Now </span></button></a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="display_flex_coloum">
-          <img
-            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Celebration+Cakes.png"
-            alt="Celebratio Cakes"
-          />
-
-          <div class="heading_btn">
-            <a class="display_flex_coloum" href="#">
-              <div class="card_txt display_flex_coloum">
-                <h3>Celebration Cakes</h3>
-                <div class="line_heading_desc"></div>
-                <p>Cake and Celebration</p>
-              </div>
-
-              <button class="button"><span>Order Now </span></button></a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="display_flex_coloum">
-          <img
-            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Celebration+Cakes.png"
-            alt="Celebratio Cakes"
-          />
-
-          <div class="heading_btn">
-            <a class="display_flex_coloum" href="#">
-              <div class="card_txt display_flex_coloum">
-                <h3>Celebration Cakes</h3>
-                <div class="line_heading_desc"></div>
-                <p>Cake and Celebration</p>
-              </div>
-
-              <button class="button"><span>Order Now </span></button></a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="display_flex_coloum">
-          <img
-            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Celebration+Cakes.png"
-            alt="Celebratio Cakes"
-          />
-
-          <div class="heading_btn">
-            <a class="display_flex_coloum" href="#">
-              <div class="card_txt display_flex_coloum">
-                <h3>Celebration Cakes</h3>
-                <div class="line_heading_desc"></div>
-                <p>Cake and Celebration</p>
-              </div>
-
-              <button class="button"><span>Order Now </span></button></a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="display_flex_coloum">
-          <img
-            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Celebration+Cakes.png"
-            alt="Celebratio Cakes"
-          />
-
-          <div class="heading_btn">
-            <a class="display_flex_coloum" href="#">
-              <div class="card_txt display_flex_coloum">
-                <h3>Celebration Cakes</h3>
-                <div class="line_heading_desc"></div>
-                <p>Cake and Celebration</p>
-              </div>
-
-              <button class="button"><span>Order Now </span></button></a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="display_flex_coloum">
-          <img
-            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Celebration+Cakes.png"
-            alt="Celebratio Cakes"
-          />
-
-          <div class="heading_btn">
-            <a class="display_flex_coloum" href="#">
-              <div class="card_txt display_flex_coloum">
-                <h3>Celebration Cakes</h3>
-                <div class="line_heading_desc"></div>
-                <p>Cake and Celebration</p>
-              </div>
-
-              <button class="button"><span>Order Now </span></button></a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="display_flex_coloum">
-          <img
-            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Celebration+Cakes.png"
-            alt="Celebratio Cakes"
-          />
-
-          <div class="heading_btn">
-            <a class="display_flex_coloum" href="#">
-              <div class="card_txt display_flex_coloum">
-                <h3>Celebration Cakes</h3>
-                <div class="line_heading_desc"></div>
-                <p>Cake and Celebration</p>
-              </div>
-
-              <button class="button"><span>Order Now </span></button></a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="display_flex_coloum">
-          <img
-            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Celebration+Cakes.png"
-            alt="Celebratio Cakes"
-          />
-
-          <div class="heading_btn">
-            <a class="display_flex_coloum" href="#">
-              <div class="card_txt display_flex_coloum">
-                <h3>Celebration Cakes</h3>
-                <div class="line_heading_desc"></div>
-                <p>Cake and Celebration</p>
-              </div>
-
-              <button class="button"><span>Order Now </span></button></a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="display_flex_coloum">
-          <img
-            src="https://cdn.dotpe.in/kiranaStatic/custom_website/Celebration+Cakes.png"
-            alt="Celebratio Cakes"
-          />
-
-          <div class="heading_btn">
-            <a class="display_flex_coloum" href="#">
-              <div class="card_txt display_flex_coloum">
-                <h3>Celebration Cakes</h3>
-                <div class="line_heading_desc"></div>
-                <p>Cake and Celebration</p>
-              </div>
-
-              <button class="button"><span>Order Now </span></button></a
-            >
-          </div>
-        </div>
-      </div>
+      
     </div>
   </body>
 </html>
-
